# src/main/modules/infrastructure/adapters/mappers/like.api.mapper.ts
@@ -1,7 +1,5 @@
 import { Injectable } from "@nestjs/common";
 import { AbstractMapper } from "../../../../core/helpers/abstract.mapper";
-import { VideoResponse } from "../../../application/dto/video-response.dto";
-import { Video } from "../../../domain/models/video.model";
 import { Like } from "../../../domain/models/like.model";
 import { LikeDto } from "../../../application/dto/like.dto";
 
