# src/main/modules/infrastructure/controllers/stats-video.controller.ts
@@ -1,23 +1,16 @@
 import {
-    Body,
     Controller,
     Logger,
-    NotFoundException,
     Param,
     Patch,
     UnprocessableEntityException
 } from "@nestjs/common";
-import { VideoService } from "../services/video.service";
 import { MockUser } from "../../../../temp.mock";
 import { LikeService } from "../services/like.service";
-import { LikeDto } from "../../application/dto/like.dto";
 
 @Controller("stats")
 export class StatsVideoController {
-    constructor(
-        private readonly likeService: LikeService,
-        private readonly videoService: VideoService
-    ) {}
+    constructor(private readonly likeService: LikeService) {}
 
     private readonly logger = new Logger(StatsVideoController.name);
 
