# src/main/modules/infrastructure/services/internal-video.service.ts
@@ -18,61 +18,15 @@ export class InternalVideoService {
         videoCreateDto.sourceType = VideoSource.INTERNAL;
         const video: Video = this.videoApiMapper.apiToEntity(videoCreateDto);
 
-        const model: Result<Video, Error> =
+        const result: Result<Video, Error> =
             await this.psqlVideoRepository.create(video);
 
-        return model.match({
+        const model = result.match({
             Ok: (value) => value,
             Error: (e) => {
                 throw new NotFoundException(e);
             }
         });
+        return model;
     }
-
-    // private async generateVideoLinks(
-    //     video: Video,
-    //     videoRequest: Pick<CreateVideoDto, "src" | "thumbnail">
-    // ): Promise<VideoPSU> {
-    //     const videoFileExt = videoRequest.src.split(".")[1];
-    //     const thumbnailFileExt = videoRequest.thumbnail.split(".")[1];
-
-    //     const outputVideoFilename = `${MINIO_VIDEO_FILE_NAME}.${videoFileExt}`;
-    //     const outputThumbnailFilename = `${MINIO_THUMBNAIL_FILE_NAME}.${thumbnailFileExt}`;
-
-    //     video.source = formatMinIOVideoFilename(
-    //         video.slug,
-    //         outputVideoFilename
-    //     );
-
-    //     this.logger.debug(
-    //         `generateVideoLinks(), new source is ${video.source}`
-    //     );
-    //     if (videoRequest.thumbnail)
-    //         video.thumbnail = formatMinIOThumbnailFilename(
-    //             video.slug,
-    //             outputThumbnailFilename
-    //         );
-
-    //     this.logger.debug(
-    //         `generateVideoLinks(), new thumbnail source is ${video.thumbnail}`
-    //     );
-
-    //     await this.videoService.update(video.id, {
-    //         source: video.source,
-    //         thumbnail: video.thumbnail
-    //     });
-    //     this.logger.debug(
-    //         `generateVideoLinks(), updated video source & thumbnail`
-    //     );
-    //     return {
-    //         videoPutPsu: await this.tokenService.putVideoPresignedUrl(
-    //             video.slug,
-    //             outputVideoFilename
-    //         ),
-    //         thumbnailPutPsu: await this.tokenService.putThumbnailPresignedUrl(
-    //             video.slug,
-    //             outputThumbnailFilename
-    //         )
-    //     };
-    // }
 }
